# tree-sitter-dockerfile

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  grammar.js  package.json  pnpm-lock.yaml  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml
bindings/c/: tree-sitter-dockerfile.pc.in  tree-sitter.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tree_sitter_dockerfile/: __init__.py  binding.c
bindings/rust/: lib.rs
bindings/swift/TreeSitterDockerfile/: dockerfile.h
corpus/: add.txt  arg.txt  cmd.txt  combo.txt  comment.txt  copy.txt  entrypoint.txt  env.txt  expose.txt  from.txt  healthcheck.txt  heredoc.txt  label.txt  maintainer.txt  onbuild.txt  run.txt  shell_instruction.txt  stopsignal.txt  strings.txt  user.txt  vars.txt  volume.txt
examples/: 1  2  6  8
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: add.txt  cmd.txt  combo.txt  comment.txt  copy.txt  cross_build.txt  entrypoint.txt  env.txt  expose.txt  from.txt  heredoc.txt  onbuild.txt  run.txt  shell_instruction.txt  stopsignal.txt  vars.txt  workdir.txt
